--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -147,4 +147,14 @@
   @include media-breakpoint-down(sm) {
     margin-top: 0;
   }
+
+
+  &__copyright {
+    padding: 20px;
+    padding-bottom: 0;
+    border-top: 1px dashed #fff;
+    opacity: .2;
+    text-align: center;
+    color: #ABABAB;
+  }
 }
