--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -292,6 +292,8 @@
       }
 
       @include media-breakpoint-down(sm) {
+        top: 10px;
+        
         &__heading {
           font-size: rem(18);
           line-height: 25px;
