--- a/src/scss/components/_mobile-menu.scss
+++ b/src/scss/components/_mobile-menu.scss
@@ -26,7 +26,7 @@ $link-color: $primary-color;
   background-color: $primary-color-dark;
 
   .hamburger {
-    margin-left: auto;
+    margin-#{$right}: auto;
     color: $white;
     cursor: pointer;
   }
@@ -37,7 +37,7 @@ $link-color: $primary-color;
   #closeMenu {
     position: absolute;
     top: 20px;
-    left: 20px;
+    #{$right}: 20px;
     font-size: 30px;
     color: $color-white;
   }
@@ -77,7 +77,7 @@ $nav-level5-background-color: $primary-color-tint-2;
         position: fixed;
         z-index: 100;
         top: 0;
-        right: 0;
+        #{$left}: 0;
         width: $nav-width;
         height: 100vh;
         background-color: $nav-background-color;
@@ -111,7 +111,7 @@ $nav-level5-background-color: $primary-color-tint-2;
         &-content {
           position: absolute;
           top: 0;
-          left: 0;
+          #{$right}: 0;
           width: 100%;
           height: 100%;
           transform: translateX(100%);
@@ -137,7 +137,7 @@ $nav-level5-background-color: $primary-color-tint-2;
     
             &::before {
             @include addIcon($nav-icon-arrow-right, 15px);
-              margin-left: 0.5em;
+              margin-#{$right}: 0.5em;
             }
           }
         }
