--- a/src/scss/helper/_helpers.scss
+++ b/src/scss/helper/_helpers.scss
@@ -112,8 +112,8 @@
 
   @include media-breakpoint-down(sm) {
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-#{$right}: auto;
+    margin-#{$left}: auto;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
