--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -106,7 +106,7 @@
       display: none;
       z-index: 9999;
       width: 40%;
-      left: 0;
+      #{$right}: 0;
       top: 88px;
       border-top: 1px solid;
 
@@ -139,7 +139,7 @@
           border: 0;
           color: #fff;
           top: -30px;
-          right: 100px;
+          #{$left}: 100px;
           width: 30px;
           height: 30px;
         }
@@ -234,7 +234,7 @@
     &__search-button {
       font-size: rem(18);
       color: $primary-color;
-      margin-left: 15px;
+      margin-#{$right}: 15px;
     }
   }
 
@@ -360,7 +360,7 @@
   .icon {
     position: absolute;
     top: 50%;
-    left: 50%;
+    #{$right}: 50%;
     transform: rotate(180deg) translate(9px, 5px);
   }
 }
