--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -84,7 +84,7 @@
       padding: 16px;
       width: 50px;
       height: 50px;
-      right: -18px;
+      #{$left}: -18px;
       &::before {
         content: "" !important;
         background-image: url("../img/Path 883.png");
@@ -97,7 +97,7 @@
     }
     .slick-prev {
       box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
-      left: -18px;
+      #{$right}: -18px;
       background-color: #fff;
       border-radius: 100px;
       padding: 16px;
@@ -126,7 +126,7 @@
       background-color: #fff;
       .right-labels {
         position: absolute;
-        right: 20px;
+        #{$left}: 20px;
         top: 20px;
         display: flex;
         .right-one {
@@ -150,7 +150,7 @@
           text-align: center;
           background-color: #fff;
           padding: 14px 20px;
-          margin-right: 10px;
+          margin-#{$left}: 10px;
         }
       }
       .prog-img {
@@ -161,16 +161,16 @@
       }
       .colored {
         color: $primary-color;
-        margin-right: 8px;
+        margin-#{$left}: 8px;
       }
       .prog-mid {
-        margin-left: 6px;
+        margin-#{$right}: 6px;
       }
       p {
         img {
           display: inline;
           padding-top: 3px;
-          float: right;
+          float: #{$left};
         }
       }
       .desc {
@@ -219,7 +219,7 @@
     padding: 16px;
     width: 50px;
     height: 50px;
-    right: -18px;
+    #{$left}: -18px;
     z-index: 999;
     &:hover {
       background-color: #fff;
@@ -236,7 +236,7 @@
   }
   .slick-prev {
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
-    left: -18px;
+    #{$right}: -18px;
     background-color: #fff;
     border-radius: 100px;
     padding: 16px;
@@ -267,7 +267,7 @@
     background-color: #fff;
     .soon {
       position: absolute;
-      left: 0;
+      #{$right}: 0;
       top: 0;
     }
     .prog-img {
@@ -357,7 +357,7 @@
       .btns {
         display: flex;
         a:nth-child(2) {
-          margin-right: 10px;
+          margin-#{$left}: 10px;
         }
       }
     }
@@ -412,7 +412,7 @@
       padding: 16px;
       width: 50px;
       height: 50px;
-      right: -18px;
+      #{$left}: -18px;
       &::before {
         content: "" !important;
         background-image: url("../img/Path 883.png");
@@ -425,7 +425,7 @@
     }
     .slick-prev {
       box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
-      left: -18px;
+      #{$right}: -18px;
       background-color: #fff;
       border-radius: 100px;
       padding: 16px;
@@ -463,7 +463,7 @@
   .highlights {
     position: absolute;
     top: -20%;
-    left: 50%;
+    #{$right}: 50%;
     -webkit-transform: translate(-50%, -16%);
     transform: translate(-50%, -16%);
     @include media-breakpoint-down(md) {
@@ -503,7 +503,7 @@ footer {
 
   .social {
     a {
-      margin-left: 5px;
+      margin-#{$right}: 5px;
       display: inline;
     }
   }
@@ -526,7 +526,7 @@ footer {
     padding: 16px;
     width: 50px;
     height: 50px;
-    right: -18px;
+    #{$left}: -18px;
     &::before {
       content: "" !important;
       background-image: url("../img/Path 883.png");
@@ -539,7 +539,7 @@ footer {
   }
   .slick-prev {
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
-    left: -18px;
+    #{$right}: -18px;
     background-color: #fff !important;
     border-radius: 100px;
     padding: 16px;
@@ -648,7 +648,7 @@ footer {
       height: 120px;
       border-radius: 100%;
       border: 10px solid #fff;
-      left: 50%;
+      #{$right}: 50%;
       object-fit: cover;
 
       -webkit-transform: translate(-50%, -16%);
@@ -669,7 +669,7 @@ footer {
 .search-trial {
   .searchbar {
     list-style: none;
-    margin-left: 20px;
+    margin-#{$right}: 20px;
     font-size: 27px;
     color: #fff;
   }
@@ -679,8 +679,8 @@ footer {
     position: absolute;
     display: flex;
     top: 74px;
-    left: 17%;
-    right: unset !important;
+    #{$right}: 17%;
+    #{$left}: unset !important;
     width: 279px !important;
     height: 47px !important;
     line-height: 60px;
@@ -690,8 +690,8 @@ footer {
       content: "";
       position: absolute;
       top: -30px;
-      left: 13px !important;
-      right: unset !important;
+      #{$right}: 13px !important;
+      #{$left}: unset !important;
       border-left: 12px solid transparent;
       border-right: 12px solid transparent;
       border-top: 14px solid transparent;
@@ -700,7 +700,7 @@ footer {
     input[type="text"] {
       width: 200px;
       padding: 5px 10px;
-      margin-left: 0 !important;
+      margin-#{$right}: 0 !important;
       border: 1px solid $primary-color;
       outline: none;
       font-size: 14px !important;
@@ -738,7 +738,7 @@ footer {
   padding: 20px;
   border-radius: 50%;
   top: 50%;
-  left: 50%;
+  #{$right}: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   color: #fff !important;
@@ -753,7 +753,7 @@ footer {
   border-radius: 30px;
   position: absolute;
   top: 50%;
-  left: 50%;
+  #{$right}: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
