--- a/src/scss/pages/_news-details.scss
+++ b/src/scss/pages/_news-details.scss
@@ -20,7 +20,7 @@
         top: 182%;
         z-index: 999;
         padding: 50px;
-       left:50%;
+        #{$right}:50%;
        background-color: #fff;
         text-align: right;
         -webkit-transform: translate(-50%, -50%);
@@ -73,7 +73,7 @@
               height: 50px;
               object-fit: cover;
               border-radius: 50%;
-              margin-left: 10px;
+              margin-#{$right}: 10px;
           }
        
 }
@@ -95,7 +95,7 @@
     padding: 20px;
     border-radius: 50%;
     top: 50%;
-    left: 50%;
+    #{$right}: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     color: #fff !important;
