--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,16 +1,19 @@
-html,
+html{
+  font-size: 14px !important;
+}
+
 body {
   direction: #{$direction};
   text-align: #{$left};
   box-sizing: border-box;
   font-family: $font-regular;
   color: $secondary-color;
-  font-size: 14px !important;
-  overflow-x: hidden;
-}
-
-body {
   position: relative;
+  overflow-x: hidden;
+  
+  * {
+    // text-align: #{$left};
+  }
   &.backdrop {
 	  height: 100vh;
 	  overflow: hidden;
