--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -115,10 +115,10 @@
       }
     }
     .slick-list {
-      direction: ltr;
+      // direction: ltr;
     }
     .program-box {
-      direction: rtl;
+      // direction: rtl;
       box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 5%) !important;
       margin: 17px;
       position: relative;
@@ -257,17 +257,17 @@
     }
   }
   .slick-list {
-    direction: ltr;
+    // direction: ltr;
   }
   .program-box {
-    direction: rtl;
+    // direction: rtl;
     margin: 17px;
     position: relative;
     border-radius: 30px;
     background-color: #fff;
     .soon {
       position: absolute;
-      #{$right}: 0;
+      left: 0;
       top: 0;
     }
     .prog-img {
@@ -389,7 +389,7 @@
   .partners-section {
     margin-bottom: 140px;
     .slick-list {
-      direction: ltr;
+      // direction: ltr;
     }
     .program-box {
       margin: 0 15px;
@@ -412,7 +412,7 @@
       padding: 16px;
       width: 50px;
       height: 50px;
-      #{$left}: -18px;
+      right: -18px;
       &::before {
         content: "" !important;
         background-image: url("../img/Path 883.png");
@@ -443,7 +443,7 @@
       }
     }
     .slick-list {
-      direction: ltr;
+      // direction: ltr;
     }
   }
 }
@@ -463,7 +463,7 @@
   .highlights {
     position: absolute;
     top: -20%;
-    #{$right}: 50%;
+    left: 50%;
     -webkit-transform: translate(-50%, -16%);
     transform: translate(-50%, -16%);
     @include media-breakpoint-down(md) {
@@ -557,11 +557,11 @@ footer {
     }
   }
   .slick-list {
-    direction: ltr;
+    // direction: ltr;
   }
   .program-box {
     box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 7%) !important;
-    direction: rtl;
+    // direction: rtl;
     margin: 10px;
     justify-content: center;
     align-items: center;
@@ -648,7 +648,7 @@ footer {
       height: 120px;
       border-radius: 100%;
       border: 10px solid #fff;
-      #{$right}: 50%;
+      left: 50%;
       object-fit: cover;
 
       -webkit-transform: translate(-50%, -16%);
