--- a/src/scss/pages/_program.scss
+++ b/src/scss/pages/_program.scss
@@ -51,7 +51,7 @@
     border-radius: 30px;
     position: absolute;
     top: 92%;
-    #{$right}: 50%;
+    left: 50%;
     -webkit-transform: translate(-50%, -16%);
     transform: translate(-50%, -16%);
     @include media-breakpoint-down(md) {
@@ -195,7 +195,7 @@
   }
   .program-box {
     background-color: #f9f9f9;
-    direction: rtl;
+    // direction: rtl;
     margin: 10px;
     justify-content: center;
     align-items: center;
@@ -244,6 +244,10 @@
       background-repeat: no-repeat;
       margin-#{$right}: 20px;
       display: block;
+
+      @if $direction == ltr {
+        transform: rotate(180deg);
+      }
     }
   }
   .accordion > .card:not(:last-of-type) {
@@ -321,10 +325,13 @@
     padding: 34px;
     width: 100%;
     border: none;
-    text-align: right;
+    // text-align: right;
     outline: none;
     font-size: 15px;
     transition: 0.4s;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     &::after {
       content: "\f067"; /* Unicode character for "plus" sign (+) */
       font-family: "FontAwesome";
