--- a/src/scss/components/_spinner.scss
+++ b/src/scss/components/_spinner.scss
@@ -17,7 +17,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 99999;
+  z-index: 99999999;
 }
 
 .loader__item {
@@ -42,4 +42,3 @@
   transform-origin: 80px 82px;
   box-sizing: content-box;
 }
-
