--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -194,6 +194,7 @@
     width: 100%;
     z-index: 999;
     top: 0;
+    left: 0;
 
     @include media-breakpoint-down(lg) {
       display: block;
@@ -239,7 +240,8 @@
   }
 
   &__main {
-    height:100vh;
+    height: 100vh;
+    position: relative;
 
     &__content {
       color: $color-white;
@@ -293,7 +295,7 @@
 
       @include media-breakpoint-down(sm) {
         top: 10px;
-        
+
         &__heading {
           font-size: rem(18);
           line-height: 25px;
@@ -325,6 +327,14 @@
       height: calc(73vh + 85px);
       padding-top: 85px;
     }
+  }
+
+  &__certificate-section {
+    position: absolute;
+    left: 20%;
+    bottom: 17px;
+    z-index: 99;
+    width: 250px;
   }
 
   @include media-breakpoint-down(lg) {
