--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 .bg-wrapper {
-  background-image: url("../img/bg1.png");
+  background-image: url('../img/bg1.png');
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -22,7 +22,8 @@
     .rounded-bg {
       border-radius: 168px;
       background-color: rgba(0, 158, 79, 0.1);
-      padding: 50px 0px;
+      padding-top: 50px;
+      padding-bottom: 50px;
       @include media-breakpoint-down(sm) {
         border-radius: 0;
       }
@@ -44,7 +45,7 @@
   }
 }
 .bg-wrapper2 {
-  background-image: url("../img/bg2.png");
+  background-image: url('../img/bg2.png');
   background-size: 100% 103%;
   background-repeat: no-repeat;
   // padding-bottom: 175px;
@@ -54,7 +55,7 @@
   .decoration-wrapper {
     @include media-breakpoint-down(sm) {
       margin: 4rem 0px;
-    background-image: none;
+      background-image: none;
     }
   }
   .decorated-title {
@@ -64,11 +65,11 @@
     align-items: center;
     justify-content: center;
     &::before {
-      content: url("../img/decoration1.png");
+      content: url('../img/decoration1.png');
       margin-top: 10px;
     }
     &::after {
-      content: url("../img/decoration2.png");
+      content: url('../img/decoration2.png');
       margin-top: 10px;
     }
     .inner-text {
@@ -86,13 +87,13 @@
       height: 50px;
       #{$left}: -18px;
       &::before {
-        content: "" !important;
-        background-image: url("../img/Path 883.png");
+        content: '' !important;
+        background-image: url('../img/Path 883.png');
         background-repeat: no-repeat;
         display: inline-block;
         width: 11px;
         height: 20px;
-        content: "";
+        content: '';
       }
     }
     .slick-prev {
@@ -105,13 +106,13 @@
       height: 50px;
       z-index: 999;
       &::before {
-        content: "" !important;
-        background-image: url("../img/left-arrow.png");
+        content: '' !important;
+        background-image: url('../img/left-arrow.png');
         background-repeat: no-repeat;
         display: inline-block;
         width: 11px;
         height: 20px;
-        content: "";
+        content: '';
       }
     }
     .slick-list {
@@ -129,9 +130,10 @@
         #{$left}: 20px;
         top: 20px;
         display: flex;
+        height: auto !important;
         .right-one {
           display: flex;
-        //   padding: 0 20px;
+          //   padding: 0 20px;
           color: $primary-color;
           border-radius: 57px;
           background-color: #fff;
@@ -142,11 +144,11 @@
           object-fit: contain;
         }
         .left-one {
-        //   padding: 20px;
+          //   padding: 20px;
           color: #ce7b2c;
           border-radius: 54px;
-        //   height: 70px;
-        //   width: 70px;
+          //   height: 70px;
+          //   width: 70px;
           text-align: center;
           background-color: #fff;
           padding: 14px 20px;
@@ -175,6 +177,7 @@
       }
       .desc {
         padding: 20px;
+        height: auto !important;
       }
     }
   }
@@ -195,11 +198,11 @@
       font-size: 1.5rem;
     }
     &::before {
-      content: url("../img/decoration1.png");
+      content: url('../img/decoration1.png');
       margin-top: 10px;
     }
     &::after {
-      content: url("../img/decoration2.png");
+      content: url('../img/decoration2.png');
       margin-top: 10px;
     }
     .inner-text {
@@ -225,13 +228,13 @@
       background-color: #fff;
     }
     &::before {
-      content: "" !important;
-      background-image: url("../img/Path 883.png");
+      content: '' !important;
+      background-image: url('../img/Path 883.png');
       background-repeat: no-repeat;
       display: inline-block;
       width: 11px;
       height: 20px;
-      content: "";
+      content: '';
     }
   }
   .slick-prev {
@@ -247,13 +250,13 @@
       background-color: #fff;
     }
     &::before {
-      content: "" !important;
-      background-image: url("../img/left-arrow.png");
+      content: '' !important;
+      background-image: url('../img/left-arrow.png');
       background-repeat: no-repeat;
       display: inline-block;
       width: 11px;
       height: 20px;
-      content: "";
+      content: '';
     }
   }
   .slick-list {
@@ -265,6 +268,7 @@
     position: relative;
     border-radius: 30px;
     background-color: #fff;
+    height: 100%;
     .soon {
       position: absolute;
       left: 0;
@@ -298,7 +302,7 @@
   }
 }
 .bg-wrapper3 {
-  background-image: url("../img/bg3.png");
+  background-image: url('../img/bg3.png');
   background-size: 100% 90%;
   background-repeat: no-repeat;
 
@@ -316,7 +320,6 @@
     @include media-breakpoint-down(sm) {
       // margin-bottom: 272px;
     }
-
 
     &__wrapper {
       flex-wrap: nowrap;
@@ -362,28 +365,27 @@
       }
     }
 
-    @include media-breakpoint-down(sm){
+    @include media-breakpoint-down(sm) {
       padding: 20px;
       &__wrapper {
         flex-wrap: wrap;
       }
 
       &__content {
-      margin-inline-start: 0;
+        margin-inline-start: 0;
       }
 
-      & .btns   {
+      & .btns {
         flex-direction: column;
         & > * {
           display: block;
           width: 100%;
-          margin: 0!important;
+          margin: 0 !important;
           img {
             width: 100%;
           }
         }
       }
-      
     }
   }
   .partners-section {
@@ -414,13 +416,13 @@
       height: 50px;
       right: -18px;
       &::before {
-        content: "" !important;
-        background-image: url("../img/Path 883.png");
+        content: '' !important;
+        background-image: url('../img/Path 883.png');
         background-repeat: no-repeat;
         display: inline-block;
         width: 11px;
         height: 20px;
-        content: "";
+        content: '';
       }
     }
     .slick-prev {
@@ -433,13 +435,13 @@
       height: 50px;
       z-index: 999;
       &::before {
-        content: "" !important;
-        background-image: url("../img/left-arrow.png");
+        content: '' !important;
+        background-image: url('../img/left-arrow.png');
         background-repeat: no-repeat;
         display: inline-block;
         width: 11px;
         height: 20px;
-        content: "";
+        content: '';
       }
     }
     .slick-list {
@@ -528,13 +530,13 @@ footer {
     height: 50px;
     #{$left}: -18px;
     &::before {
-      content: "" !important;
-      background-image: url("../img/Path 883.png");
+      content: '' !important;
+      background-image: url('../img/Path 883.png');
       background-repeat: no-repeat;
       display: inline-block;
       width: 11px;
       height: 20px;
-      content: "";
+      content: '';
     }
   }
   .slick-prev {
@@ -547,13 +549,13 @@ footer {
     height: 50px;
     z-index: 999;
     &::before {
-      content: "" !important;
-      background-image: url("../img/left-arrow.png");
+      content: '' !important;
+      background-image: url('../img/left-arrow.png');
       background-repeat: no-repeat;
       display: inline-block;
       width: 11px;
       height: 20px;
-      content: "";
+      content: '';
     }
   }
   .slick-list {
@@ -595,6 +597,7 @@ footer {
 
 .gallery-section {
   .gallery-box {
+    height: 100%;
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
     border-radius: 27px;
     background-color: #fff;
@@ -603,6 +606,7 @@ footer {
     }
     @include media-breakpoint-down(sm) {
       margin-top: 30px;
+      margin-bottom: 15px;
     }
     img {
       width: 100%;
@@ -658,8 +662,17 @@ footer {
     &__text {
       color: $primary-color;
       font-family: $font-bold;
-
     }
+  }
+
+  &__more {
+    @include media-breakpoint-down(sm) {
+      margin-top: 100px;
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
+    margin-top: 60px;
   }
 }
 .margino3 {
@@ -687,7 +700,7 @@ footer {
     box-shadow: 0 0 10px rgb(0 0 0 / 50%);
     border-top: 4px solid #ce7b2c !important;
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       top: -30px;
       #{$right}: 13px !important;
@@ -697,7 +710,7 @@ footer {
       border-top: 14px solid transparent;
       border-bottom: 14px solid #ce7b2c !important;
     }
-    input[type="text"] {
+    input[type='text'] {
       width: 200px;
       padding: 5px 10px;
       margin-#{$right}: 0 !important;
@@ -765,5 +778,66 @@ footer {
 footer {
   @include media-breakpoint-down(md) {
     padding: 32px 30px;
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .bg-wrapper,
+  .bg-wrapper2,
+  .bg-wrapper3 {
+    background-image: none;
+  }
+}
+
+.corner {
+  &__tabs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__items {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      width: 100%;
+      margin-bottom: 40px;
+      border-radius: 0;
+
+      &__item {
+        background-color: #fff;
+        border: 1px solid #ababab !important;
+        border-radius: 21px !important;
+        text-align: center;
+        font-size: 14px;
+        font-weight: bold;
+        color: #ababab;
+        padding: 10px 30px;
+        width: auto;
+
+        &:not(:last-child) {
+          margin-inline-end: 15px;
+        }
+
+        &.active,
+        &:hover {
+          background-color: #ce7b2c;
+          border-color: #ce7b2c;
+          color: #fff;
+        }
+      }
+
+      @include media-breakpoint-down(sm) {
+        flex-direction: column;
+
+        &__item {
+          width: 100%;
+          &:not(:last-child) {
+            margin-inline-end: 0;
+            margin-bottom: 15px;
+          }
+        }
+      }
+    }
   }
 }
