--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -17,6 +17,10 @@
     p {
       width: 80%;
     }
+
+    @include media-breakpoint-down(sm) {
+      margin: 50px 0;
+    }
   }
   .counters-section {
     .rounded-bg {
