--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -533,7 +533,7 @@ footer {
     padding: 16px;
     width: 50px;
     height: 50px;
-    #{$left}: -18px;
+    // #{$left}: -18px;
     &::before {
       content: '' !important;
       background-image: url('../img/Path 883.png');
@@ -546,7 +546,7 @@ footer {
   }
   .slick-prev {
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
-    #{$right}: -18px;
+    // #{$right}: -18px;
     background-color: #fff !important;
     border-radius: 100px;
     padding: 16px;
